# semantic-cache-optimizer

./: .gitignore  README.md  config.yaml  demo.py  evaluate.py  evaluation_results.json  pyproject.toml  requirements.txt  test_cache_manager.py
evaluation/: analyze_category_performance.py  analyze_dataset_categories.py  cache_benchmark.py  run_experiments_extended.py
evaluation/data/: README.md
examples/: demo.py  test_adaptive_threshold.py
experiments/: __init__.py  adaptive_threshold.py  baseline.py  cache_aging.py  partitioned_cache.py
src/: __init__.py  adaptive_threshold.py  cache_manager.py  llm_adapter.py
src/experimental/: README.md  density_based.py  length_based.py  preprocessing.py  score_gap.py
src/similarity_evaluators/: __init__.py  adaptive_threshold.py  base.py  density_based.py  fixed_threshold.py  length_based.py  score_gap.py
