[tool.poetry]
name = "softwarequality-project-gptcache-extension"
version = "0.1.0"
description = ""
authors = ["Catharina Dümmen, Paul Augsten"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gptcache = {path = "GPTCache", develop = true}
tensorflow = "^2.20.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
