[tool.poetry]
name = "softwarequality-project-gptcache-extension"
version = "0.1.0"
description = ""
authors = ["Catharina Dümmen, Paul Augsten"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
gptcache = ">=0.1.42"
sentence-transformers = ">=2.2.0"
transformers = ">=4.30.0"
faiss-cpu = ">=1.7.4"
langchain = "0.0.274"
datasets = ">=2.14.0"
numpy = ">=1.24.0"
loguru = "^0.7.0"
pyyaml = "^6.0"
tqdm = "^4.66.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
